// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePanel render: correct 12hours in the fixed time list 1`] = `
<div
  class="mx-time"
>
  <!---->
   
  <div
    class="mx-time-content"
  >
    <div
      class="mx-scrollbar"
      style="position: relative; overflow: hidden;"
    >
      <div
        class="mx-scrollbar-wrap"
        style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
      >
        <ul
          class="mx-time-list"
        >
          <li
            class="cell"
          >
            
      08:30 AM
    
          </li>
          <li
            class="cell"
          >
            
      09:00 AM
    
          </li>
          <li
            class="cell"
          >
            
      09:30 AM
    
          </li>
          <li
            class="cell"
          >
            
      10:00 AM
    
          </li>
          <li
            class="cell"
          >
            
      10:30 AM
    
          </li>
          <li
            class="cell"
          >
            
      11:00 AM
    
          </li>
          <li
            class="cell"
          >
            
      11:30 AM
    
          </li>
          <li
            class="cell"
          >
            
      12:00 PM
    
          </li>
          <li
            class="cell active"
          >
            
      12:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      01:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      01:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      02:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      02:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      03:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      03:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      04:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      04:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      05:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      05:30 PM
    
          </li>
          <li
            class="cell"
          >
            
      06:00 PM
    
          </li>
          <li
            class="cell"
          >
            
      06:30 PM
    
          </li>
        </ul>
      </div>
       
      <div
        class="mx-scrollbar-track"
      >
        <div
          class="mx-scrollbar-thumb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePanel render: correct classes of the columns 1`] = `
<div
  class="mx-time"
>
  <!---->
   
  <div
    class="mx-time-content"
  >
    <div
      class="mx-time-columns"
    >
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="0"
            data-type="hour"
          >
            <li
              class="cell disabled"
              data-index="0"
            >
              
        00
      
            </li>
            <li
              class="cell disabled"
              data-index="1"
            >
              
        01
      
            </li>
            <li
              class="cell disabled"
              data-index="2"
            >
              
        02
      
            </li>
            <li
              class="cell disabled"
              data-index="3"
            >
              
        03
      
            </li>
            <li
              class="cell disabled"
              data-index="4"
            >
              
        04
      
            </li>
            <li
              class="cell disabled"
              data-index="5"
            >
              
        05
      
            </li>
            <li
              class="cell disabled"
              data-index="6"
            >
              
        06
      
            </li>
            <li
              class="cell disabled"
              data-index="7"
            >
              
        07
      
            </li>
            <li
              class="cell disabled"
              data-index="8"
            >
              
        08
      
            </li>
            <li
              class="cell disabled"
              data-index="9"
            >
              
        09
      
            </li>
            <li
              class="cell"
              data-index="10"
            >
              
        10
      
            </li>
            <li
              class="cell"
              data-index="11"
            >
              
        11
      
            </li>
            <li
              class="cell active"
              data-index="12"
            >
              
        12
      
            </li>
            <li
              class="cell"
              data-index="13"
            >
              
        13
      
            </li>
            <li
              class="cell"
              data-index="14"
            >
              
        14
      
            </li>
            <li
              class="cell"
              data-index="15"
            >
              
        15
      
            </li>
            <li
              class="cell"
              data-index="16"
            >
              
        16
      
            </li>
            <li
              class="cell"
              data-index="17"
            >
              
        17
      
            </li>
            <li
              class="cell"
              data-index="18"
            >
              
        18
      
            </li>
            <li
              class="cell"
              data-index="19"
            >
              
        19
      
            </li>
            <li
              class="cell"
              data-index="20"
            >
              
        20
      
            </li>
            <li
              class="cell"
              data-index="21"
            >
              
        21
      
            </li>
            <li
              class="cell"
              data-index="22"
            >
              
        22
      
            </li>
            <li
              class="cell"
              data-index="23"
            >
              
        23
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="1"
            data-type="minute"
          >
            <li
              class="cell"
              data-index="0"
            >
              
        00
      
            </li>
            <li
              class="cell"
              data-index="1"
            >
              
        01
      
            </li>
            <li
              class="cell"
              data-index="2"
            >
              
        02
      
            </li>
            <li
              class="cell"
              data-index="3"
            >
              
        03
      
            </li>
            <li
              class="cell"
              data-index="4"
            >
              
        04
      
            </li>
            <li
              class="cell"
              data-index="5"
            >
              
        05
      
            </li>
            <li
              class="cell"
              data-index="6"
            >
              
        06
      
            </li>
            <li
              class="cell"
              data-index="7"
            >
              
        07
      
            </li>
            <li
              class="cell"
              data-index="8"
            >
              
        08
      
            </li>
            <li
              class="cell"
              data-index="9"
            >
              
        09
      
            </li>
            <li
              class="cell"
              data-index="10"
            >
              
        10
      
            </li>
            <li
              class="cell"
              data-index="11"
            >
              
        11
      
            </li>
            <li
              class="cell"
              data-index="12"
            >
              
        12
      
            </li>
            <li
              class="cell"
              data-index="13"
            >
              
        13
      
            </li>
            <li
              class="cell"
              data-index="14"
            >
              
        14
      
            </li>
            <li
              class="cell"
              data-index="15"
            >
              
        15
      
            </li>
            <li
              class="cell"
              data-index="16"
            >
              
        16
      
            </li>
            <li
              class="cell"
              data-index="17"
            >
              
        17
      
            </li>
            <li
              class="cell"
              data-index="18"
            >
              
        18
      
            </li>
            <li
              class="cell"
              data-index="19"
            >
              
        19
      
            </li>
            <li
              class="cell"
              data-index="20"
            >
              
        20
      
            </li>
            <li
              class="cell"
              data-index="21"
            >
              
        21
      
            </li>
            <li
              class="cell"
              data-index="22"
            >
              
        22
      
            </li>
            <li
              class="cell"
              data-index="23"
            >
              
        23
      
            </li>
            <li
              class="cell"
              data-index="24"
            >
              
        24
      
            </li>
            <li
              class="cell"
              data-index="25"
            >
              
        25
      
            </li>
            <li
              class="cell"
              data-index="26"
            >
              
        26
      
            </li>
            <li
              class="cell"
              data-index="27"
            >
              
        27
      
            </li>
            <li
              class="cell"
              data-index="28"
            >
              
        28
      
            </li>
            <li
              class="cell"
              data-index="29"
            >
              
        29
      
            </li>
            <li
              class="cell active"
              data-index="30"
            >
              
        30
      
            </li>
            <li
              class="cell"
              data-index="31"
            >
              
        31
      
            </li>
            <li
              class="cell"
              data-index="32"
            >
              
        32
      
            </li>
            <li
              class="cell"
              data-index="33"
            >
              
        33
      
            </li>
            <li
              class="cell"
              data-index="34"
            >
              
        34
      
            </li>
            <li
              class="cell"
              data-index="35"
            >
              
        35
      
            </li>
            <li
              class="cell"
              data-index="36"
            >
              
        36
      
            </li>
            <li
              class="cell"
              data-index="37"
            >
              
        37
      
            </li>
            <li
              class="cell"
              data-index="38"
            >
              
        38
      
            </li>
            <li
              class="cell"
              data-index="39"
            >
              
        39
      
            </li>
            <li
              class="cell"
              data-index="40"
            >
              
        40
      
            </li>
            <li
              class="cell"
              data-index="41"
            >
              
        41
      
            </li>
            <li
              class="cell"
              data-index="42"
            >
              
        42
      
            </li>
            <li
              class="cell"
              data-index="43"
            >
              
        43
      
            </li>
            <li
              class="cell"
              data-index="44"
            >
              
        44
      
            </li>
            <li
              class="cell"
              data-index="45"
            >
              
        45
      
            </li>
            <li
              class="cell"
              data-index="46"
            >
              
        46
      
            </li>
            <li
              class="cell"
              data-index="47"
            >
              
        47
      
            </li>
            <li
              class="cell"
              data-index="48"
            >
              
        48
      
            </li>
            <li
              class="cell"
              data-index="49"
            >
              
        49
      
            </li>
            <li
              class="cell"
              data-index="50"
            >
              
        50
      
            </li>
            <li
              class="cell"
              data-index="51"
            >
              
        51
      
            </li>
            <li
              class="cell"
              data-index="52"
            >
              
        52
      
            </li>
            <li
              class="cell"
              data-index="53"
            >
              
        53
      
            </li>
            <li
              class="cell"
              data-index="54"
            >
              
        54
      
            </li>
            <li
              class="cell"
              data-index="55"
            >
              
        55
      
            </li>
            <li
              class="cell"
              data-index="56"
            >
              
        56
      
            </li>
            <li
              class="cell"
              data-index="57"
            >
              
        57
      
            </li>
            <li
              class="cell"
              data-index="58"
            >
              
        58
      
            </li>
            <li
              class="cell"
              data-index="59"
            >
              
        59
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="2"
            data-type="second"
          >
            <li
              class="cell"
              data-index="0"
            >
              
        00
      
            </li>
            <li
              class="cell"
              data-index="1"
            >
              
        01
      
            </li>
            <li
              class="cell"
              data-index="2"
            >
              
        02
      
            </li>
            <li
              class="cell"
              data-index="3"
            >
              
        03
      
            </li>
            <li
              class="cell"
              data-index="4"
            >
              
        04
      
            </li>
            <li
              class="cell"
              data-index="5"
            >
              
        05
      
            </li>
            <li
              class="cell"
              data-index="6"
            >
              
        06
      
            </li>
            <li
              class="cell"
              data-index="7"
            >
              
        07
      
            </li>
            <li
              class="cell"
              data-index="8"
            >
              
        08
      
            </li>
            <li
              class="cell"
              data-index="9"
            >
              
        09
      
            </li>
            <li
              class="cell"
              data-index="10"
            >
              
        10
      
            </li>
            <li
              class="cell"
              data-index="11"
            >
              
        11
      
            </li>
            <li
              class="cell"
              data-index="12"
            >
              
        12
      
            </li>
            <li
              class="cell"
              data-index="13"
            >
              
        13
      
            </li>
            <li
              class="cell"
              data-index="14"
            >
              
        14
      
            </li>
            <li
              class="cell"
              data-index="15"
            >
              
        15
      
            </li>
            <li
              class="cell"
              data-index="16"
            >
              
        16
      
            </li>
            <li
              class="cell"
              data-index="17"
            >
              
        17
      
            </li>
            <li
              class="cell"
              data-index="18"
            >
              
        18
      
            </li>
            <li
              class="cell"
              data-index="19"
            >
              
        19
      
            </li>
            <li
              class="cell"
              data-index="20"
            >
              
        20
      
            </li>
            <li
              class="cell"
              data-index="21"
            >
              
        21
      
            </li>
            <li
              class="cell"
              data-index="22"
            >
              
        22
      
            </li>
            <li
              class="cell"
              data-index="23"
            >
              
        23
      
            </li>
            <li
              class="cell"
              data-index="24"
            >
              
        24
      
            </li>
            <li
              class="cell"
              data-index="25"
            >
              
        25
      
            </li>
            <li
              class="cell"
              data-index="26"
            >
              
        26
      
            </li>
            <li
              class="cell"
              data-index="27"
            >
              
        27
      
            </li>
            <li
              class="cell"
              data-index="28"
            >
              
        28
      
            </li>
            <li
              class="cell"
              data-index="29"
            >
              
        29
      
            </li>
            <li
              class="cell active"
              data-index="30"
            >
              
        30
      
            </li>
            <li
              class="cell"
              data-index="31"
            >
              
        31
      
            </li>
            <li
              class="cell"
              data-index="32"
            >
              
        32
      
            </li>
            <li
              class="cell"
              data-index="33"
            >
              
        33
      
            </li>
            <li
              class="cell"
              data-index="34"
            >
              
        34
      
            </li>
            <li
              class="cell"
              data-index="35"
            >
              
        35
      
            </li>
            <li
              class="cell"
              data-index="36"
            >
              
        36
      
            </li>
            <li
              class="cell"
              data-index="37"
            >
              
        37
      
            </li>
            <li
              class="cell"
              data-index="38"
            >
              
        38
      
            </li>
            <li
              class="cell"
              data-index="39"
            >
              
        39
      
            </li>
            <li
              class="cell"
              data-index="40"
            >
              
        40
      
            </li>
            <li
              class="cell"
              data-index="41"
            >
              
        41
      
            </li>
            <li
              class="cell"
              data-index="42"
            >
              
        42
      
            </li>
            <li
              class="cell"
              data-index="43"
            >
              
        43
      
            </li>
            <li
              class="cell"
              data-index="44"
            >
              
        44
      
            </li>
            <li
              class="cell"
              data-index="45"
            >
              
        45
      
            </li>
            <li
              class="cell"
              data-index="46"
            >
              
        46
      
            </li>
            <li
              class="cell"
              data-index="47"
            >
              
        47
      
            </li>
            <li
              class="cell"
              data-index="48"
            >
              
        48
      
            </li>
            <li
              class="cell"
              data-index="49"
            >
              
        49
      
            </li>
            <li
              class="cell"
              data-index="50"
            >
              
        50
      
            </li>
            <li
              class="cell"
              data-index="51"
            >
              
        51
      
            </li>
            <li
              class="cell"
              data-index="52"
            >
              
        52
      
            </li>
            <li
              class="cell"
              data-index="53"
            >
              
        53
      
            </li>
            <li
              class="cell"
              data-index="54"
            >
              
        54
      
            </li>
            <li
              class="cell"
              data-index="55"
            >
              
        55
      
            </li>
            <li
              class="cell"
              data-index="56"
            >
              
        56
      
            </li>
            <li
              class="cell"
              data-index="57"
            >
              
        57
      
            </li>
            <li
              class="cell"
              data-index="58"
            >
              
        58
      
            </li>
            <li
              class="cell"
              data-index="59"
            >
              
        59
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePanel render: correct classes of the fixed time list 1`] = `
<div
  class="mx-time"
>
  <!---->
   
  <div
    class="mx-time-content"
  >
    <div
      class="mx-scrollbar"
      style="position: relative; overflow: hidden;"
    >
      <div
        class="mx-scrollbar-wrap"
        style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
      >
        <ul
          class="mx-time-list"
        >
          <li
            class="cell disabled"
          >
            
      08:30
    
          </li>
          <li
            class="cell disabled"
          >
            
      09:00
    
          </li>
          <li
            class="cell disabled"
          >
            
      09:30
    
          </li>
          <li
            class="cell"
          >
            
      10:00
    
          </li>
          <li
            class="cell"
          >
            
      10:30
    
          </li>
          <li
            class="cell"
          >
            
      11:00
    
          </li>
          <li
            class="cell"
          >
            
      11:30
    
          </li>
          <li
            class="cell"
          >
            
      12:00
    
          </li>
          <li
            class="cell active"
          >
            
      12:30
    
          </li>
          <li
            class="cell"
          >
            
      13:00
    
          </li>
          <li
            class="cell"
          >
            
      13:30
    
          </li>
          <li
            class="cell"
          >
            
      14:00
    
          </li>
          <li
            class="cell"
          >
            
      14:30
    
          </li>
          <li
            class="cell"
          >
            
      15:00
    
          </li>
          <li
            class="cell"
          >
            
      15:30
    
          </li>
          <li
            class="cell"
          >
            
      16:00
    
          </li>
          <li
            class="cell"
          >
            
      16:30
    
          </li>
          <li
            class="cell"
          >
            
      17:00
    
          </li>
          <li
            class="cell"
          >
            
      17:30
    
          </li>
          <li
            class="cell"
          >
            
      18:00
    
          </li>
          <li
            class="cell"
          >
            
      18:30
    
          </li>
        </ul>
      </div>
       
      <div
        class="mx-scrollbar-track"
      >
        <div
          class="mx-scrollbar-thumb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePanel render: correct columns by format 1`] = `
<div
  class="mx-time"
>
  <!---->
   
  <div
    class="mx-time-content"
  >
    <div
      class="mx-time-columns"
    >
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="0"
            data-type="hour"
          >
            <li
              class="cell"
              data-index="0"
            >
              
        08
      
            </li>
            <li
              class="cell"
              data-index="1"
            >
              
        09
      
            </li>
            <li
              class="cell"
              data-index="2"
            >
              
        10
      
            </li>
            <li
              class="cell"
              data-index="3"
            >
              
        11
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="1"
            data-type="minute"
          >
            <li
              class="cell active"
              data-index="0"
            >
              
        00
      
            </li>
            <li
              class="cell"
              data-index="1"
            >
              
        30
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
      <div
        class="mx-scrollbar mx-time-column"
        style="position: relative; overflow: hidden;"
      >
        <div
          class="mx-scrollbar-wrap"
          style="overflow: hidden scroll; height: 100%; margin-right: -0px;"
        >
          <ul
            data-index="2"
            data-type="ampm"
          >
            <li
              class="cell active"
              data-index="0"
            >
              
        AM
      
            </li>
            <li
              class="cell"
              data-index="1"
            >
              
        PM
      
            </li>
          </ul>
        </div>
         
        <div
          class="mx-scrollbar-track"
        >
          <div
            class="mx-scrollbar-thumb"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
